Bug 386102 - CSV import broken
Summary: CSV import broken
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 3.0.2
Platform: Other Linux
: HI major
Target Milestone: 3.1
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-23 11:33 UTC by Jarosław Staniek
Modified: 2017-10-23 11:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2017-10-23 11:33:24 UTC
CSV import is broken since a June 26 2017 change.

To test: Run External Data -> Import Data from file. Pick any nonempty CSV.

Result: no data on preview, no imported rows.

Expected: preview present, rows are imported.
Comment 1 Jarosław Staniek 2017-10-23 11:37:51 UTC
Git commit 10a3e4d85fe32e76f520747ca5f4b80a4e744070 by Jaroslaw Staniek.
Committed on 23/10/2017 at 11:37.
Pushed by staniek into branch 'master'.

Fix broken CSV import

(the import was broken since by a June 26 2017 change e89fe0f6625f2b6df20ca)

Thanks for reporting, Albrecht!

CCMAIL:albrecht.will@online.de
FIXED-IN:3.1.0

M  +4    -3    src/plugins/importexport/csv/kexicsvimportdialog.cpp

https://commits.kde.org/kexi/10a3e4d85fe32e76f520747ca5f4b80a4e744070