Fix broken CSV import

(the import was broken since by a June 26 2017 change e89fe0f6625f2b6df20ca)

Thanks for reporting, Albrecht!

CCMAIL:albrecht.will@online.de

BUG:386102
FIXED-IN:3.1.0