src/plugins/importexport/csv/kexicsvimportdialog.cpp
@@ -1248,12 +1248,12 @@ tristate KexiCSVImportDialog::loadRows(QString &field, int &row, int &column, in
             }
             break;
         case S_MAYBE_NORMAL_FIELD :
-            if (x == m_textquote) {
+        case S_NORMAL_FIELD :
+            if (state == S_MAYBE_NORMAL_FIELD && x == m_textquote) {
                 field.clear();
                 state = S_QUOTED_FIELD;
+                break;
             }
-            break;
-        case S_NORMAL_FIELD :
             if (x == delimiter || x == '\n' || x == '\r' || (x == commentSymbol && m_parseComments)) {
                 setText(row - m_startline, column, field, inGUI);
                 field.clear();
@@ -1275,6 +1275,7 @@ tristate KexiCSVImportDialog::loadRows(QString &field, int &row, int &column, in
             } else {
                 field += x;
             }
+            break;
         } // switch
         if (x != delimiter)
             lastCharDelimiter = false;
